[gd_scene load_steps=3 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Time.gd" type="Script" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 21.0
margin_right = -30.0
margin_bottom = -18.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 966.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 400.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )

[node name="Date" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 404.0
margin_right = 644.0
margin_bottom = 48.0
text = "YYYY-MM-DD"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 966.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 400.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )
text = "OS Date:"

[node name="Date" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 404.0
margin_right = 644.0
margin_bottom = 48.0
text = "2022-09-27"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 966.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 400.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )
text = "OS Time:"

[node name="Time" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 404.0
margin_right = 692.0
margin_bottom = 48.0
text = "12:23:34.054"

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 966.0
margin_bottom = 204.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_right = 400.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )
text = "Game + OS Time:"

[node name="AdjOSTime" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_left = 404.0
margin_right = 692.0
margin_bottom = 48.0
text = "12:23:34.054"

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 966.0
margin_bottom = 256.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer7"]
margin_right = 400.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )
text = "Server Time:"

[node name="ServerTime" type="Label" parent="VBoxContainer/HBoxContainer7"]
margin_left = 404.0
margin_right = 692.0
margin_bottom = 48.0
text = "12:23:34.054"

[node name="HBoxContainer8" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 966.0
margin_bottom = 308.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer8"]
margin_right = 400.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )
text = "Game + Srv Time:"

[node name="AdjSrvTime" type="Label" parent="VBoxContainer/HBoxContainer8"]
margin_left = 404.0
margin_right = 692.0
margin_bottom = 48.0
text = "12:23:34.054"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 312.0
margin_right = 966.0
margin_bottom = 360.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_right = 400.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )
text = "Sys + Srv Time:"

[node name="SysSrvTime" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 404.0
margin_right = 692.0
margin_bottom = 48.0
text = "12:23:34.054"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 364.0
margin_right = 966.0
margin_bottom = 412.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_right = 400.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 0 )
text = "Punished Time:"

[node name="Punish" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 404.0
margin_right = 692.0
margin_bottom = 48.0
text = "12:23:34.054"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 416.0
margin_right = 966.0
margin_bottom = 466.0
rect_min_size = Vector2( 0, 50 )
toggle_mode = true
text = "Block Server"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="toggled" from="VBoxContainer/Button" to="." method="_on_Button_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
